Neu-Organization des Resources-Ordners

--- a/ws/football/src/main/resources/templates/forum.html
+++ b/ws/football/src/main/resources/templates/forum.html
@@ -205,22 +205,22 @@
     }
 
     .sidebar li a:hover #icon1 {
-        background-image: url("assets/homefill.png");
+        background-image: url("/assets/homefill.png");
         background-size: cover;
     }
 
     .sidebar li a:hover #icon2 {
-        background-image: url("assets/Angesagtfill.png");
+        background-image: url("/assets/Angesagtfill.png");
         background-size: cover;
     }
 
     .sidebar li a:hover #icon3 {
-        background-image: url("assets/icon-uhr-fill.png");
+        background-image: url("/assets/icon-uhr-fill.png");
         background-size: cover;
     }
 
     .sidebar li a:hover #icon4 {
-        background-image: url("assets/icon-topic-fill.png");
+        background-image: url("/assets/icon-topic-fill.png");
         background-size: cover;
     }
 
@@ -541,7 +541,7 @@ object-position: center;
 
     <body>
         <header class="header">
-            <a href="#"><img src="assets/Logo.png" class="logo"></a>
+            <a href="#"><img src="/assets/Logo.png" class="logo"></a>
             <input type="checkbox" id="check">
             <label for="check" class="menu">
                 <i class="bx bx-menu" id="icon-menu"></i>
@@ -565,19 +565,19 @@ object-position: center;
                     <div class="menu-block">
                     <li class="nav-link">
                         <a href="#">
-                            <img src="assets/Home.png" class="sidebar-icon" id="icon1"></i>
+                            <img src="/assets/Home.png" class="sidebar-icon" id="icon1"></i>
                             <span class="text nav-text">Startseite</span>
                         </a>
                     </li>
                     <li class="nav-link">
                         <a href="#">
-                            <img src="assets/Angesagt.png" class="sidebar-icon" id="icon2"></i>
+                            <img src="/assets/Angesagt.png" class="sidebar-icon" id="icon2"></i>
                             <span class="text nav-text">Angesagt</span>
                         </a>
                     </li>
                     <li class="nav-link">
                         <a href="#">
-                            <img src="assets/icon-uhr.png" class="sidebar-icon" id="icon3"></i>
+                            <img src="/assets/icon-uhr.png" class="sidebar-icon" id="icon3"></i>
                             <span class="text nav-text">Zuletzt geteilt</span>
                         </a>
                     </li>
@@ -585,31 +585,31 @@ object-position: center;
                     </div> //-->
                     <li class="nav-link">
                         <a href="#">
-                            <img src="assets/icon-topic.png" class="sidebar-icon" id="icon4"></i>
+                            <img src="/assets/icon-topic.png" class="sidebar-icon" id="icon4"></i>
                             <span class="text nav-text">Topic 1</span>
                         </a>
                     </li>
                     <li class="nav-link">
                         <a href="#">
-                            <img src="assets/icon-topic.png" class="sidebar-icon" id="icon4"></i>
+                            <img src="/assets/icon-topic.png" class="sidebar-icon" id="icon4"></i>
                             <span class="text nav-text">Topic 2</span>
                         </a>
                     </li>
                     <li class="nav-link">
                         <a href="#">
-                            <img src="assets/icon-topic.png" class="sidebar-icon" id="icon4"></i>
+                            <img src="/assets/icon-topic.png" class="sidebar-icon" id="icon4"></i>
                             <span class="text nav-text">Topic 3</span>
                         </a>
                     </li>
                     <li class="nav-link">
                         <a href="#">
-                            <img src="assets/icon-topic.png" class="sidebar-icon" id="icon4"></i>
+                            <img src="/assets/icon-topic.png" class="sidebar-icon" id="icon4"></i>
                             <span class="text nav-text">Topic 4</span>
                         </a>
                     </li>
                     <li class="nav-link">
                         <a href="#">
-                            <img src="assets/icon-topic.png" class="sidebar-icon" id="icon4"></i>
+                            <img src="/assets/icon-topic.png" class="sidebar-icon" id="icon4"></i>
                             <span class="text nav-text">Topic 5</span>
                         </a>
                     </li>
@@ -617,7 +617,7 @@ object-position: center;
                     </div> //-->
                     <li class="nav-link">
                         <a href="#">
-                            <img src="assets/icon-topic.png" class="sidebar-icon"></i>
+                            <img src="/assets/icon-topic.png" class="sidebar-icon"></i>
                             <span class="text nav-text">Topic 5</span>
                         </a>
                     </li>
@@ -630,7 +630,7 @@ object-position: center;
                     <div class="content" id="content">
                         <div class="commentbox">
                             <div class="userimage">
-                                <img src="assets/user.png" class="userimage">
+                                <img src="/assets/user.png" class="userimage">
                             </div>
                             <div class="commentinput">
                                 <textarea type="text" id="userComment" placeholder="Was gibt's Neues?!" class="usercomment"></textarea>
@@ -640,7 +640,7 @@ object-position: center;
                         <div class="bottomsection">
                             <div class="icons">
                                 <button id="uploadButton" title="Upload Photo">
-                                    <img src="assets/popup-gallery.png" alt="Upload Image">
+                                    <img src="/assets/popup-gallery.png" alt="Upload Image">
                                 </button>
                                 <p id="uploadMessage" style="display: none; color: red;">Es kann nur ein Foto hochgeladen werden</p>
                                 <input type="file" id="fileInput" accept="image/*" style="display:none">
@@ -683,6 +683,6 @@ object-position: center;
 
 
 
-                <script src="forum.js"></script>
+                <script src="/js/forum.js"></script>
     </body>
     </html>
