--- a/ws/football/src/main/resources/templates/login.html
+++ b/ws/football/src/main/resources/templates/login.html
@@ -345,7 +345,7 @@ font-size: 20px;
             </div>
         </form>
     </div>
-    <script src="login.js"></script>
+    <script src="js/login.js"></script>
 
 </body>
 </html>
