--- a/ws/football/src/main/resources/templates/stadien.html
+++ b/ws/football/src/main/resources/templates/stadien.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <!-- CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stadien.css">
 </head>
 <body>
     <header class="header">
