--- a/ws/football/src/main/resources/templates/stadien.html
+++ b/ws/football/src/main/resources/templates/stadien.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="#"><img src="/assets/Logo.png" class="logo"></a>
+        <a href="#"><img src="assets/Logo.png" class="logo"></a>
         <input type="checkbox" id="check">
         <label for="check" class="menu">
             <i class="bx bx-menu" id="icon-menu"></i>
@@ -33,7 +33,7 @@
                 <a href="#" class="button">Erfahre mehr</a>
         </div>
         </div>
-        <img src="/assets/olympiastadion2.jpeg" class="image">
+        <img src="assets/olympiastadion2.jpeg" class="image">
     </div>
     <div class="myslider fade">
         <div class="text">
@@ -43,7 +43,7 @@
                 <a href="#" class="button">Erfahre mehr</a>
             </div>
         </div>
-        <img src="/assets\stadion-bayern.png" class="image">
+        <img src="assets\stadion-bayern.png" class="image">
     </div>
     <div class="myslider fade">
         <div class="text">
@@ -53,7 +53,7 @@
                 <a href="#" class="button">Erfahre mehr</a>
             </div>
         </div>
-        <img src="/assets\stadion-dortmund.jpg" class="image">
+        <img src="assets\stadion-dortmund.jpg" class="image">
     </div>
     <div class="myslider fade">
         <div class="text">
@@ -63,7 +63,7 @@
                 <a href="#" class="button">Erfahre mehr</a>
             </div>
         </div>
-        <img src="/assets\stadion-hsv.jpg" class="image">
+        <img src="assets\stadion-hsv.jpg" class="image">
     </div>
     <div class="myslider fade">
         <div class="text">
@@ -73,7 +73,7 @@
                 <a href="#" class="button">Erfahre mehr</a>
             </div>
         </div>
-        <img src="/assets\stadion-frankfurt.jpg" class="image">
+        <img src="assets\stadion-frankfurt.jpg" class="image">
     </div>
     <div class="myslider fade">
         <div class="text">
@@ -83,7 +83,7 @@
                 <a href="#" class="button">Erfahre mehr</a>
             </div>
         </div>
-        <img src="/assets\stadion-gelsenkirchen.png" class="image">
+        <img src="assets\stadion-gelsenkirchen.png" class="image">
     </div>
     <div class="myslider fade">
         <div class="text">
@@ -93,7 +93,7 @@
                 <a href="#" class="button">Erfahre mehr</a>
             </div>
         </div>
-        <img src="/assets\stadion-leipzig.jpeg" class="image">
+        <img src="assets\stadion-leipzig.jpeg" class="image">
     </div>
     <div class="myslider fade">
         <div class="text">
@@ -103,7 +103,7 @@
                 <a href="#" class="button">Erfahre mehr</a>
         </div>
         </div>
-        <img src="/assets\stadion-dusseldorf2.jpg" class="image">
+        <img src="assets\stadion-dusseldorf2.jpg" class="image">
     </div>
     <div class="myslider fade">
         <div class="text">
@@ -113,7 +113,7 @@
                 <a href="#" class="button">Erfahre mehr</a>
         </div>
         </div>
-        <img src="/assets\stadion-koeln.jpg" class="image">
+        <img src="img\stadion-koeln.jpg" class="image">
     </div>
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -130,48 +130,28 @@
     </div>
    </div>
 
-   <div class="container">
-        <div class="container2" id="berlin">
-            <div class="text-info">
+   <div class="container" id="bayern">
+        <div class="main-container" >
+            
+            <div class="container2" id="text-info">
                 <h1>Allianz Arena</h1>
-                <p>Die im Jahr 2005 eröffnete Allianz Arena in München ist als reine Fußball-Arena konzipiert worden. In nicht einmal drei Jahren Bauzeit entstand eine architektonisch einzigartige Arena, die heute als modernstes Stadion Europas gilt. Hier finden Sie sämtliche Informationen zu diesem beeindruckenden Bauwerk.
-
-                    Der Bau der Allianz Arena wurde durch einen Bürgerentscheid am 21. Oktober 2001 unterstützt, bei dem eine überwältigende Mehrheit von 65,8 Prozent für das Projekt stimmte. Das sogenannte Quorum wurde erfüllt, und die Wahlbeteiligung lag mit 37,5 Prozent so hoch wie noch nie bei einem Bürgerentscheid in Bayern. Die Grundsteinlegung erfolgte am 21. Oktober 2002, und die Übergabe durch die Alpine Bau GmbH fand am 30. April 2005 statt. Die Gesamtinvestition für dieses herausragende Projekt betrug 340 Millionen Euro.
-                    
-                    Die Allianz Arena wurde von den Münchner Vereinen FC Bayern und TSV 1860 zu jeweils 50% in der Allianz Arena München Stadion GmbH gegründet. Der FC Bayern übernahm vorläufig bis zum 30. Juni 2010 die Anteile zu 100%, während das Rückkaufsrecht des TSV 1860 am 25. April 2008 endgültig aufgehoben wurde. Die Allianz SE sicherte sich die Namensrechte an der Arena bis ins Jahr 2041.
-                    
-                    Aufgrund des Abstiegs des TSV 1860 München in der Saison 2016/17 wurde der Mietvertrag zwischen der TSV München von 1860 GmbH & Co. KGaA und der Allianz Arena München Stadion GmbH am 12. Juli 2017 aufgelöst.
-                    
-                    Die Allianz Arena beeindruckt nicht nur durch ihre äußere Erscheinung, sondern auch durch ihre Innenausstattung. Mit 6.000 m² Gastronomieflächen, einem FC Bayern Museum und einer Vielzahl von anderen Einrichtungen bietet sie ein umfassendes Erlebnis für Besucher.
-                    
-                    Die Dimensionen der Arena sind ebenso beeindruckend wie ihre Ausstattung. Mit einer Gesamtnutzfläche von 171.000 m² und einer Kapazität von über 75.000 Plätzen bei nationalen Spielen ist sie ein Symbol für modernen Sport und Unterhaltung.
-                    
-                    Zu den ersten Spielen in der Allianz Arena gehörten das Traditionsderby zwischen FC Bayern München und TSV 1860 München am 19. Mai 2005, sowie das Eröffnungsspiel zwischen TSV 1860 München und 1. FC Nürnberg am 30. Mai 2005. Ein weiteres bedeutendes Spiel war das Eröffnungsspiel zwischen FC Bayern München und der Deutschen Nationalmannschaft am 31. Mai 2005.
-                    
-                    Diese Spiele markierten den Beginn einer neuen Ära für den deutschen Fußball und die Allianz Arena als führende Sportstätte Europas.</p>
+                <p>Verein: FC Bayern München<br><br>
+                    Stadt: München<br><br>
+                    Kapazität: 0<br><br>
+                    Eröffnung: 1850<br><br>
+                    Größe?</p>
             </div>
-            <div class="text-bild">
-                <h1>Das ist ein Stadion2</h1>
+            <div class="container2" id="text-bild">
+                <img src="assets/bayern-stadion-außen.jpeg">
+            </div>
+            <div class="container2" id="text-ganz">
+                <p>Die Allianz Arena, eröffnet am 30. Mai 2005, ist das beeindruckende Heimstadion des FC Bayern München und befindet sich im Münchner Stadtteil Fröttmaning. Mit einer Kapazität von etwa 75.000 Zuschauern bei Bundesliga-Spielen und 70.000 bei internationalen Spielen bietet sie Platz für eine große Anzahl von Fans. Ihre markante Architektur mit einer Außenhülle aus beleuchtbaren ETFE-Folienkissen ermöglicht es, die Arena in verschiedenen Farben erstrahlen zu lassen, was sie zu einem der auffälligsten Stadien weltweit macht. Neben den Heimspielen des FC Bayern München werden in der Allianz Arena auch große Veranstaltungen wie Konzerte und Länderspiele ausgerichtet. Ein Highlight ihrer Geschichte ist die Ausrichtung des Eröffnungsspiels der Fußball-Weltmeisterschaft 2006.</p></p>
             </div>
         </div>
-        <div class="container2">
-            <div class="text-info">
-                <h1>Das ist ein Stadion</h1>
-            </div>
-            <div class="text-bild">
-                <h1>Das ist ein Stadion2</h1>
-            </div>
-        </div>
-        <div class="container2">
-            <div class="text-info">
-                <h1>Das ist ein Stadion</h1>
-            </div>
-            <div class="text-bild">
-                <h1>Das ist ein Stadion2</h1>
-            </div>
-        </div>
+        
+      
     </div>
 
-   <script src="/js/script.js"></script>
+   <script src="script.js"></script>
 </body>
 </html>
