--- a/ws/football/src/main/resources/templates/stadien.html
+++ b/ws/football/src/main/resources/templates/stadien.html
@@ -113,7 +113,7 @@
                 <a href="#" class="button">Erfahre mehr</a>
         </div>
         </div>
-        <img src="img\stadion-koeln.jpg" class="image">
+        <img src="assets\stadion-koeln.jpg" class="image">
     </div>
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
