--- a/ws/football/src/main/resources/templates/stadien.html
+++ b/ws/football/src/main/resources/templates/stadien.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="#"><img src="assets/Logo.png" class="logo"></a>
+        <a href="#"><img src="assets\Logo.png" class="logo"></a>
         <input type="checkbox" id="check">
         <label for="check" class="menu">
             <i class="bx bx-menu" id="icon-menu"></i>
@@ -30,7 +30,7 @@
             <div class="blau">
                 <span>Olympiastadion</span>
                 <h2>Berlin</h2>
-                <a href="#" class="button">Erfahre mehr</a>
+                <a href="#berlin" class="button">Erfahre mehr</a>
         </div>
         </div>
         <img src="assets/olympiastadion2.jpeg" class="image">
@@ -40,7 +40,7 @@
             <div class="rot">
                 <span>Allianz Arena</span>
                 <h2>München</h2>
-                <a href="#" class="button">Erfahre mehr</a>
+                <a href="#bayern" class="button">Erfahre mehr</a>
             </div>
         </div>
         <img src="assets\stadion-bayern.png" class="image">
@@ -50,7 +50,7 @@
             <div class="gelb">
                 <span>Signal Iduna Park</span>
                 <h2>Dortmund</h2>
-                <a href="#" class="button">Erfahre mehr</a>
+                <a href="#dortmund" class="button">Erfahre mehr</a>
             </div>
         </div>
         <img src="assets\stadion-dortmund.jpg" class="image">
@@ -60,7 +60,7 @@
             <div class="blau">
                 <span>Volksparkstadium</span>
                 <h2>Hamburg</h2>
-                <a href="#" class="button">Erfahre mehr</a>
+                <a href="#hamburg" class="button">Erfahre mehr</a>
             </div>
         </div>
         <img src="assets\stadion-hsv.jpg" class="image">
@@ -70,7 +70,7 @@
             <div class="schwarz">
                 <span>Deutsche Bank Park</span>
                 <h2>Frankfurt</h2>
-                <a href="#" class="button">Erfahre mehr</a>
+                <a href="#frankfurt" class="button">Erfahre mehr</a>
             </div>
         </div>
         <img src="assets\stadion-frankfurt.jpg" class="image">
@@ -80,7 +80,7 @@
             <div class="blau">
                 <span>Veltins-Arena</span>
                 <h2>Gelsenkirchen</h2>
-                <a href="#" class="button">Erfahre mehr</a>
+                <a href="#gelsenkirchen" class="button">Erfahre mehr</a>
             </div>
         </div>
         <img src="assets\stadion-gelsenkirchen.png" class="image">
@@ -90,7 +90,7 @@
             <div class="rot">
                 <span>Red Bull Arena</span>
                 <h2>Leipzig</h2>
-                <a href="#" class="button">Erfahre mehr</a>
+                <a href="#leipzig" class="button">Erfahre mehr</a>
             </div>
         </div>
         <img src="assets\stadion-leipzig.jpeg" class="image">
@@ -100,7 +100,7 @@
             <div class="rot">
                 <span>Merkur Spiel-Arena</span>
                 <h2>Düsseldorf</h2>
-                <a href="#" class="button">Erfahre mehr</a>
+                <a href="#düsseldorf" class="button">Erfahre mehr</a>
         </div>
         </div>
         <img src="assets\stadion-dusseldorf2.jpg" class="image">
@@ -110,7 +110,7 @@
             <div class="rot">
                 <span>Rheinenergiestadion</span>
                 <h2>Köln</h2>
-                <a href="#" class="button">Erfahre mehr</a>
+                <a href="#köln" class="button">Erfahre mehr</a>
         </div>
         </div>
         <img src="assets\stadion-koeln.jpg" class="image">
@@ -130,12 +130,30 @@
     </div>
    </div>
 
-   <div class="container" id="bayern">
+   <div class="container" id="berlin">
         <div class="main-container" >
-            
+            <div class="container2" id="text-info">
+                <h1>Olympiastadion</h1>
+                <p><br>Verein: FC Bayern München<br><br>
+                    Stadt: München<br><br>
+                    Kapazität: 0<br><br>
+                    Eröffnung: 1850<br><br>
+                    Größe?</p>
+            </div>
+            <div class="container2" id="text-bild">
+                <img src="assets/berlin-stadion-außen.webp">
+            </div>
+            <div class="container2" id="text-ganz">
+                <p>Hallo</p>
+            </div>
+        </div>  
+    </div>
+
+    <div class="container" id="bayern">
+        <div class="main-container" >
             <div class="container2" id="text-info">
                 <h1>Allianz Arena</h1>
-                <p>Verein: FC Bayern München<br><br>
+                <p><br>Verein: FC Bayern München<br><br>
                     Stadt: München<br><br>
                     Kapazität: 0<br><br>
                     Eröffnung: 1850<br><br>
@@ -147,11 +165,136 @@
             <div class="container2" id="text-ganz">
                 <p>Die Allianz Arena, eröffnet am 30. Mai 2005, ist das beeindruckende Heimstadion des FC Bayern München und befindet sich im Münchner Stadtteil Fröttmaning. Mit einer Kapazität von etwa 75.000 Zuschauern bei Bundesliga-Spielen und 70.000 bei internationalen Spielen bietet sie Platz für eine große Anzahl von Fans. Ihre markante Architektur mit einer Außenhülle aus beleuchtbaren ETFE-Folienkissen ermöglicht es, die Arena in verschiedenen Farben erstrahlen zu lassen, was sie zu einem der auffälligsten Stadien weltweit macht. Neben den Heimspielen des FC Bayern München werden in der Allianz Arena auch große Veranstaltungen wie Konzerte und Länderspiele ausgerichtet. Ein Highlight ihrer Geschichte ist die Ausrichtung des Eröffnungsspiels der Fußball-Weltmeisterschaft 2006.</p></p>
             </div>
-        </div>
-        
-      
+        </div>  
+    </div>
+    <div class="container" id="dortmund">
+        <div class="main-container" >
+            <div class="container2" id="text-info">
+                <h1>Olympiastadion</h1>
+                <p><br>Verein: FC Bayern München<br><br>
+                    Stadt: München<br><br>
+                    Kapazität: 0<br><br>
+                    Eröffnung: 1850<br><br>
+                    Größe?</p>
+            </div>
+            <div class="container2" id="text-bild">
+                <img src="assets/dortmund-stadion-außen.jpg">
+            </div>
+            <div class="container2" id="text-ganz">
+                <p>Hallo</p>
+            </div>
+        </div>  
+    </div>
+    <div class="container" id="hamburg">
+        <div class="main-container" >
+            <div class="container2" id="text-info">
+                <h1>Olympiastadion</h1>
+                <p><br>Verein: FC Bayern München<br><br>
+                    Stadt: München<br><br>
+                    Kapazität: 0<br><br>
+                    Eröffnung: 1850<br><br>
+                    Größe?</p>
+            </div>
+            <div class="container2" id="text-bild">
+                <img src="assets/hamburg-stadion-außen.jpg">
+            </div>
+            <div class="container2" id="text-ganz">
+                <p>Hallo</p>
+            </div>
+        </div>  
+    </div>
+    <div class="container" id="frankfurt">
+        <div class="main-container" >
+            <div class="container2" id="text-info">
+                <h1>Olympiastadion</h1>
+                <p><br>Verein: FC Bayern München<br><br>
+                    Stadt: München<br><br>
+                    Kapazität: 0<br><br>
+                    Eröffnung: 1850<br><br>
+                    Größe?</p>
+            </div>
+            <div class="container2" id="text-bild">
+                <img src="assets/frankfurt-stadion-außen.jpg">
+            </div>
+            <div class="container2" id="text-ganz">
+                <p>Hallo</p>
+            </div>
+        </div>  
+    </div>
+    <div class="container" id="gelsenkirchen">
+        <div class="main-container" >
+            <div class="container2" id="text-info">
+                <h1>Olympiastadion</h1>
+                <p><br>Verein: FC Bayern München<br><br>
+                    Stadt: München<br><br>
+                    Kapazität: 0<br><br>
+                    Eröffnung: 1850<br><br>
+                    Größe?</p>
+            </div>
+            <div class="container2" id="text-bild">
+                <img src="assets/gelsenkirchen-stadion-außen.jpg">
+            </div>
+            <div class="container2" id="text-ganz">
+                <p>Hallo</p>
+            </div>
+        </div>  
+    </div>
+    <div class="container" id="leipzig">
+        <div class="main-container" >
+            <div class="container2" id="text-info">
+                <h1>Olympiastadion</h1>
+                <p><br>Verein: FC Bayern München<br><br>
+                    Stadt: München<br><br>
+                    Kapazität: 0<br><br>
+                    Eröffnung: 1850<br><br>
+                    Größe?</p>
+            </div>
+            <div class="container2" id="text-bild">
+                <img src="assets/leipzig-stadion-außen.jpg">
+            </div>
+            <div class="container2" id="text-ganz">
+                <p>Hallo</p>
+            </div>
+        </div>  
+    </div>
+    <div class="container" id="düsseldorf">
+        <div class="main-container" >
+            <div class="container2" id="text-info">
+                <h1>Olympiastadion</h1>
+                <p><br>Verein: FC Bayern München<br><br>
+                    Stadt: München<br><br>
+                    Kapazität: 0<br><br>
+                    Eröffnung: 1850<br><br>
+                    Größe?</p>
+            </div>
+            <div class="container2" id="text-bild">
+                <img src="assets/düsseldorf-stadion-außen.jpg">
+            </div>
+            <div class="container2" id="text-ganz">
+                <p>Hallo</p>
+            </div>
+        </div>  
+    </div>
+    <div class="container" id="köln">
+        <div class="main-container" >
+            <div class="container2" id="text-info">
+                <h1>Olympiastadion</h1>
+                <p><br>Verein: FC Bayern München<br><br>
+                    Stadt: München<br><br>
+                    Kapazität: 0<br><br>
+                    Eröffnung: 1850<br><br>
+                    Größe?</p>
+            </div>
+            <div class="container2" id="text-bild">
+                <img src="assets/köln-stadion-außen.jpg">
+            </div>
+            <div class="container2" id="text-ganz">
+                <p>Hallo</p>
+            </div>
+        </div>  
     </div>
 
-   <script src="script.js"></script>
+
+   <script src="stadien.js"></script>
 </body>
 </html>
